server/api/Log/logs/warn.log
2023-10-31T18:15:40.218Z warn: Account ID: Guest. Message -> This is a warn log message
2023-10-31T18:15:40.218Z error: Account ID: Guest. Message -> This is an error log message
2023-10-31T18:15:40.219Z fatal: Account ID: Guest. Message -> This is a fatal log message
2023-10-31T18:15:40.219Z unknown: Account ID: Guest. Message -> This is an unknown level log message
2023-10-31T18:45:13.112Z error: uncaughtException: Unexpected token '('
C:\Temp\3203\project\app\autobidderapp\server\api\cars\sellCar.js:138
        accountLog.(err)
                   ^

SyntaxError: Unexpected token '('
    at Object.compileFunction (node:vm:352:18)
    at wrapSafe (node:internal/modules/cjs/loader:1033:15)
    at Module._compile (node:internal/modules/cjs/loader:1069:27)
    at Object.Module._extensions..js (node:internal/modules/cjs/loader:1159:10)
    at Module.load (node:internal/modules/cjs/loader:981:32)
    at Function.Module._load (node:internal/modules/cjs/loader:822:12)
    at Module.require (node:internal/modules/cjs/loader:1005:19)
    at require (node:internal/modules/cjs/helpers:102:18)
    at Object.<anonymous> (C:\Temp\3203\project\app\autobidderapp\server\server.js:48:19)
    at Module._compile (node:internal/modules/cjs/loader:1105:14)
2023-10-31T18:56:49.685Z error: uncaughtException: Unexpected token '.'
C:\Temp\3203\project\app\autobidderapp\server\api\cars\sellCar.js:290
    req..error(`${err.message}, Stack: ${err.stack}`);
        ^

SyntaxError: Unexpected token '.'
    at Object.compileFunction (node:vm:352:18)
    at wrapSafe (node:internal/modules/cjs/loader:1033:15)
    at Module._compile (node:internal/modules/cjs/loader:1069:27)
    at Object.Module._extensions..js (node:internal/modules/cjs/loader:1159:10)
    at Module.load (node:internal/modules/cjs/loader:981:32)
    at Function.Module._load (node:internal/modules/cjs/loader:822:12)
    at Module.require (node:internal/modules/cjs/loader:1005:19)
    at require (node:internal/modules/cjs/helpers:102:18)
    at Object.<anonymous> (C:\Temp\3203\project\app\autobidderapp\server\server.js:48:19)
    at Module._compile (node:internal/modules/cjs/loader:1105:14)
2023-10-31T18:57:32.284Z error: Account ID: 32. Message -> A car with this vehicle number already exists, Stack: Error: A car with this vehicle number already exists
    at C:\Temp\3203\project\app\autobidderapp\server\api\cars\sellCar.js:230:31
2023-10-31T18:59:35.020Z error: Account ID: 32. Message -> A car with this vehicle number already exists, Stack: Error: A car with this vehicle number already exists
    at C:\Temp\3203\project\app\autobidderapp\server\api\cars\sellCar.js:227:31
2023-10-31T18:59:43.507Z warn: Account ID: 32. Message -> This is a warn log message
2023-10-31T18:59:43.507Z error: Account ID: 32. Message -> This is an error log message
2023-10-31T18:59:43.508Z fatal: Account ID: 32. Message -> This is a fatal log message
2023-10-31T18:59:43.509Z unknown: Account ID: 32. Message -> This is an unknown level log message
2023-10-31T19:23:53.147Z error: uncaughtException: app.use() requires a middleware function
TypeError: app.use() requires a middleware function
    at Function.use (C:\Temp\3203\project\app\autobidderapp\server\node_modules\express\lib\application.js:217:11)
    at Object.<anonymous> (C:\Temp\3203\project\app\autobidderapp\server\server.js:59:5)
    at Module._compile (node:internal/modules/cjs/loader:1105:14)
    at Object.Module._extensions..js (node:internal/modules/cjs/loader:1159:10)
    at Module.load (node:internal/modules/cjs/loader:981:32)
    at Function.Module._load (node:internal/modules/cjs/loader:822:12)
    at Function.executeUserEntryPoint [as runMain] (node:internal/modules/run_main:77:12)
    at node:internal/main/run_main_module:17:47
2023-10-31T19:26:24.226Z warn: Account ID: 32. Message -> This is a warn log message
2023-10-31T19:26:24.226Z error: Account ID: 32. Message -> This is an error log message
2023-10-31T19:26:24.227Z fatal: Account ID: 32. Message -> This is a fatal log message
2023-10-31T19:26:24.227Z unknown: Account ID: 32. Message -> This is an unknown level log message
2023-10-31T19:29:56.243Z warn: Account ID: 32. Message -> This is a warn log message
2023-10-31T19:29:56.244Z error: Account ID: 32. Message -> This is an error log message
2023-10-31T19:29:56.245Z fatal: Account ID: 32. Message -> This is a fatal log message
2023-10-31T19:31:10.332Z warn: Account ID: 32. Message -> This is a warn log message
2023-10-31T19:31:10.333Z error: Account ID: 32. Message -> This is an error log message
2023-10-31T19:31:10.334Z fatal: Account ID: 32. Message -> This is a fatal log message
2023-10-31T20:22:58.432Z warn: Account ID: Guest. Message -> This is a warn log message
2023-10-31T20:22:58.433Z error: Account ID: Guest. Message -> This is an error log message
2023-10-31T20:22:58.434Z fatal: Account ID: Guest. Message -> This is a fatal log message
2023-10-31T20:23:18.295Z warn: Account ID: 32. Message -> This is a warn log message
2023-10-31T20:23:18.296Z error: Account ID: 32. Message -> This is an error log message
2023-10-31T20:23:18.297Z fatal: Account ID: 32. Message -> This is a fatal log message
2023-10-31T21:46:11.591Z error: uncaughtException: Unexpected token '}'
C:\Temp\3203\project\app\autobidderapp\server\api\cars\sellCar.js:39
};
^

SyntaxError: Unexpected token '}'
    at Object.compileFunction (node:vm:352:18)
    at wrapSafe (node:internal/modules/cjs/loader:1033:15)
    at Module._compile (node:internal/modules/cjs/loader:1069:27)
    at Object.Module._extensions..js (node:internal/modules/cjs/loader:1159:10)
    at Module.load (node:internal/modules/cjs/loader:981:32)
    at Function.Module._load (node:internal/modules/cjs/loader:822:12)
    at Module.require (node:internal/modules/cjs/loader:1005:19)
    at require (node:internal/modules/cjs/helpers:102:18)
    at Object.<anonymous> (C:\Temp\3203\project\app\autobidderapp\server\server.js:53:19)
    at Module._compile (node:internal/modules/cjs/loader:1105:14)
02-11-2023 21:21:03 warn: Account ID: Guest. Message -> User not authenticated
02-11-2023 21:26:45 warn: Account ID: Guest. Message -> User not authenticated
02-11-2023 21:51:19 warn: Account ID: Guest. Message -> User not authenticated
02-11-2023 21:54:42 warn: Account ID: Guest. Message -> User not authenticated
02-11-2023 21:55:00 warn: Account ID: Guest. Message -> User not authenticated
02-11-2023 22:05:02 warn: Account ID: Guest. Message -> User not authenticated
02-11-2023 22:06:08 warn: Account ID: Guest. Message -> User not authenticated
02-11-2023 22:36:59 warn: Account ID: Guest. Message -> User not authenticated
02-11-2023 23:11:52 warn: Account ID: Guest. Message -> User not authenticated
02-11-2023 23:15:46 warn: Account ID: Guest. Message -> User not authenticated
02-11-2023 23:15:57 warn: Account ID: Guest. Message -> User not authenticated
02-11-2023 23:16:09 warn: Account ID: Guest. Message -> User not authenticated
02-11-2023 23:16:20 warn: Account ID: Guest. Message -> User not authenticated
02-11-2023 23:16:30 warn: Account ID: Guest. Message -> User not authenticated
02-11-2023 23:16:40 warn: Account ID: Guest. Message -> User not authenticated
02-11-2023 23:16:50 warn: Account ID: Guest. Message -> User not authenticated
02-11-2023 23:17:04 warn: Account ID: Guest. Message -> User not authenticated
02-11-2023 23:17:16 warn: Account ID: Guest. Message -> User not authenticated
02-11-2023 23:19:30 warn: Account ID: Guest. Message -> User not authenticated
02-11-2023 23:33:43 warn: Account ID: Guest. Message -> User not authenticated
